<resources>
    <string name="app_name">dance_world</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="UsernameLogin">Username</string>
    <string name="PasswordLogin">Password</string>
    <string name="AppTheme">App theme</string>
    <string name="perimeters">Perimeter</string>
    <string name="ToolbarDanceWorld">DANCE WORLD</string>
    <string name="welcometext">Dance all over the world! Want to know more?</string>
    <string name="Yes">Yes</string>

    <string name="colorpicker_dialog_title">Choose the color</string>
    <string name="colorpicker_dialog_cancel">CANCEL</string>
    <string name="colorpicker_dialog_ok">OK</string>

</resources>
